--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
     implementation "com.github.hotchemi:khronos:0.9.0"
 
+    implementation 'com.google.android:flexbox:2.0.1'
+
 }
